# ObjectWrapper

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: cmake-linux.yml  cmake-multiple-platforms.yml  documentation.yml
documentation/: CodingStyle.md  basic.md  dgObject.md
examples/custom_class/: CMakeLists.txt  custom_class.c
examples/integer_example/: CMakeLists.txt  integer_example.c
examples/shared_library/: CMakeLists.txt
examples/shared_library/includes/: cow_say.h  lib_init.h
examples/shared_library/prog_src/: main.c
examples/shared_library/src/: cow_say.c  lib_init.c
includes/: array.h  ctypes.h  dg_object.h  dg_object_identifiers.h  map.h  object.h  object_identifiers.h  ow_string.h  path.h  vector.h
src/: array.c  ctypes.c  dg_object.c  map.c  object.c  ow_string.c  path.c  vector.c
tests/: array.c  ctypes.c  dg_object.c  map.c  object.c  ow_string.c  path.c  vector.c
